--- a/index.html
+++ b/index.html
@@ -3,11 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- favicon -->
+    <link
+      rel="shortcut icon"
+      href="icons8-camellia-48.png"
+      type="image/x-icon"
+    />
+    <!-- font Awasome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+      integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- tailwind css -->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Flower market</title>
     <link rel="stylesheet" href="style/style.css">
     
 </head>
-<body>
+<body class="bg-sky-100">
+    <header class="max-w-7xl mx-auto">
+      <!-- navbar  -->
+      <nav class="flex justify-between items-center mt-4 text-[18px] px-3.5">
+        <div>
+          <img src="./assets/logo.png" alt="" />
+        </div>
+        <div class="flex justify-center items-center gap-12">
+          <ul class="hidden sm:flex gap-12 group">
+            <li
+              class="opacity-100 group-hover:opacity-50 hover:!opacity-100 transition"
+            >
+              Home
+            </li>
+            <li
+              class="opacity-100 group-hover:opacity-50 hover:!opacity-100 transition"
+            >
+              Shop
+            </li>
+            <li
+              class="opacity-100 group-hover:opacity-50 hover:!opacity-100 transition"
+            >
+              About Us
+            </li>
+          </ul>
+
+          <div class="flex items-center pb-4 gap-2.5">
+            <p><i class="fa-solid fa-cart-shopping"></i></p>
+            <p>Cart ($56)</p>
+          </div>
+        </div>
+      </nav>
+
+      <!-- Banner -->
+      <section class="sm:flex justify-between items-end h-auto mt-32">
+        <div
+          class="right order-2 flex justify-end border-gray-300 sm:border-2 border-dashed"
+        >
+          <img src="./assets/hero-flower.png" alt="" />
+        </div>
+        <div class="sm:max-w-1/2 order-1 px-3.5">
+          <h1 class="text-4xl mt-6 font-[noto] font-bold sm:text-[65px]">
+            ALWAYS <span class="text-[#E95A08]">FRESH FLOWERS</span>
+          </h1>
+          <p
+            class="mt-6 text-[16px] text-left font-[inter] opacity-60 sm:text-2xl"
+          >
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh flowers that are perfect for any occasion.
+          </p>
+        </div>
+      </section>
+    </header>
     
 </body>
 </html>
