added main section

--- a/index.html
+++ b/index.html
@@ -77,6 +77,226 @@
         </div>
       </section>
     </header>
+    <!-- main section  -->
+    <main class="max-w-7xl mx-auto mt-32 mb-32 relative">
+      <!-- card -->
+      <section class="hero-card">
+        <div class="text-content text-center mb-12">
+          <h1 class="text-5xl font-bold font-[noto]">
+            <span class="text-[#E95A08]">Our</span> Plants
+          </h1>
+          <p
+            class="text-[16px] px-3.5 sm:px-12 text-center sm:text-xl mt-3 font-[inter] opacity-60"
+          >
+            Indulge your senses with the beauty and fragrance of our fresh
+            flower shop. From classic roses to exotic blooms, we offer a wide
+            variety of fresh.
+          </p>
+        </div>
+
+        <div
+          class="hero-card px-3.5 sm:px-0 font-[inter] grid grid-cols-2 gap-y-5 gap-x-8 sm:grid-cols-4 sm:gap-x-16"
+        >
+          <div class="card w-fit">
+            <img
+              class="border-gray-300 sm:border-2 border-dashed"
+              src="./assets/sample-flower-image.png"
+              alt=""
+            />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full p-2 mt-3 hover:bg-orange-700 transition text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+          <div class="card w-fit">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full hover:bg-orange-700 transition p-2 mt-3 text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+          <div class="card w-fit">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full hover:bg-orange-700 transition p-2 mt-3 text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+          <div class="card w-fit">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full hover:bg-orange-700 transition p-2 mt-3 text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+          <div class="card w-fit">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full hover:bg-orange-700 transition p-2 mt-3 text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+          <div class="card w-fit">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full hover:bg-orange-700 transition p-2 mt-3 text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+          <div class="card w-fit">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full hover:bg-orange-700 transition p-2 mt-3 text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+          <div class="card w-fit">
+            <img src="./assets/sample-flower-image.png" alt="" />
+            <div class="text text-center mt-5">
+              <p class="text-xl font-medium">Lily Blossom</p>
+              <p class="text-[22px] font-semibold">20 USD</p>
+              <button
+                class="w-full hover:bg-orange-700 transition p-2 mt-3 text-white font-semibold bg-[#E95A08]"
+                type="button"
+              >
+                ADD TO CART
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- trusted-certificate -->
+      <section
+        class="mt-54 px-3.5 sm:px-0 sm:flex justify-between items-center relative"
+      >
+        <figure
+          class="invisible sm:visible absolute -top-32 left-2/5 -translate-x-1/2"
+        >
+          <img
+            id="badge"
+            class="animate-spin-slow"
+            src="./assets/trusted-badge.png"
+            alt=""
+          />
+        </figure>
+
+        <div class="left sm:w-1/2">
+          <img src="./assets/flower-store.png" alt="flower store" />
+        </div>
+
+        <div class="right sm:w-1/2">
+          <h1
+            class="text-2xl mt-3.5 sm:text-7xl font-bold font-[noto] text-left mb-4"
+          >
+            Flower & Plants Lover
+          </h1>
+          <ul
+            class="list-disc text-[16px] px-3.5 sm:text-[22px] opacity-60 font-[inter]"
+          >
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+            <li>
+              Indulge your senses with the beauty and fragrance of our fresh
+              flower shop. From classic roses to exotic blooms, we offer a wide
+              variety of fresh.
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- deal section -->
+
+      <section
+        class="mt-32 px-3.5 sm:px-0 sm:grid grid-cols-3 sm:grid-rows-2 gap-8 h-118"
+      >
+        <div
+          class="one relative h-1/2 mb-4 sm:mb-0 sm:h-full font-bold text-white rounded-2xl flex flex-col justify-center items-center"
+        >
+          <h1 class="">
+            <span class="relative z-10 text-2xl border-r-3 px-3">60% off</span>
+            <span class="relative z-10 text-2xl">Bloom Plant</span>
+          </h1>
+          <p class="relative z-10 underline text-[20px] mt-5">Shop Now</p>
+          <div class="absolute inset-0 rounded-2xl bg-black/40"></div>
+        </div>
+
+        <div
+          class="two relative h-1/2 mb-4 sm:h-full sm:mb-0 col-start-1 rounded-2xl font-bold row-start-2 flex flex-col text-white justify-center items-center"
+        >
+          <h1 class="">
+            <span class="relative z-10 text-2xl border-r-3 px-3">30% off</span>
+            <span class="relative z-10 text-2xl">Ana Plant</span>
+          </h1>
+          <p class="underline relative z-10 text-[20px] mt-5">Shop Now</p>
+          <div class="absolute inset-0 rounded-2xl bg-black/40"></div>
+        </div>
+        <div
+          class="last relative h-1/2 mb-4 sm:h-full sm:mb-0 col-span-2 text-white font-bold rounded-2xl row-span-2 col-start-2 row-start-1 flex flex-col justify-center items-center"
+        >
+          <h1 class="">
+            <span class="relative z-10 text-2xl sm:text-5xl border-r-3 px-3"
+              >25% off</span
+            >
+            <span class="relative z-10 text-2xl sm:text-5xl">Zobo Plant</span>
+          </h1>
+          <p class="underline relative z-10 text-[20px] sm:text-3xl mt-5">
+            Shop Now
+          </p>
+          <div class="absolute inset-0 rounded-2xl bg-black/40"></div>
+        </div>
+      </section>
+    </main>
     
 </body>
 </html>
