added footer section

--- a/index.html
+++ b/index.html
@@ -297,6 +297,33 @@
         </div>
       </section>
     </main>
+
+    <!-- footer -->
+    <section
+      class="searchBox mt-100 sm:mt-32 bg-[url('./assets/news-letter-bg.png')] bg-cover bg-center h-[500px] flex items-center justify-center text-white"
+    >
+      <div class="text-center px-4 w-full max-w-3xl">
+        <h1 class="text-3xl md:text-4xl mb-5 font-bold">
+          Join the colorful Bunch
+        </h1>
+
+        <form
+          class="flex sm:gap-0 sm:flex-row items-center justify-center sm: w-full"
+        >
+          <input
+            type="email"
+            placeholder="Write email"
+            class="px-4 py-2 w-full sm:w-4/5 text-black outline-none bg-white"
+          />
+          <button
+            type="submit"
+            class="bg-orange-600 hover:bg-orange-700 transition text-white font-semibold px-3.5 py-2"
+          >
+            Subscribe
+          </button>
+        </form>
+      </div>
+    </section>
     
 </body>
 </html>
