--- a/index.html
+++ b/index.html
@@ -325,5 +325,43 @@
       </div>
     </section>
     
+     <!-- finishing section -->
+    <section
+      class="max-w-7xl mx-auto mt-32 px-3.5 mb-8 sm:grid grid-cols-4 justify-around"
+    >
+      <div>
+        <img class="mb-10" src="./assets/logo.png" alt="" />
+        <p class="opacity-60 mb-5">
+          Indulge your senses with the beauty and fragrance of our fresh flower
+          shop.
+        </p>
+      </div>
+
+      <div>
+        <ul class="opacity-60">
+          <li class="pb-3.5">Home</li>
+          <li class="pb-3.5">About us</li>
+          <li class="pb-3.5">Blog</li>
+          <li class="pb-3.5">FAQ</li>
+          <li class="pb-3.5">Contact Us</li>
+        </ul>
+      </div>
+
+      <div>
+        <ul class="opacity-60">
+          <li class="pb-3.5">Features</li>
+          <li class="pb-3.5">Pricing</li>
+          <li class="pb-3.5">Privacy Policy</li>
+          <li class="pb-3.5">Terms of Service</li>
+          <li class="pb-3.5">Help Center</li>
+        </ul>
+      </div>
+      <div class="flex gap-10">
+        <img class="w-9 h-9" src="assets/icon-linkedin.png" alt="" />
+        <img class="w-9 h-9" src="assets/icon-twitter.png" alt="" />
+        <img class="w-9 h-9" src="assets/icon-facebook.png" alt="" />
+        <img class="w-9 h-9" src="assets/icon-youtube.png" alt="" />
+      </div>
+    </section>
 </body>
 </html>
